--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,9 @@ jobs:
       - name: install pip packages
         run: |
           python -m pip install --upgrade pip
-          pip3 install -r requirements.txt
+          pip3 install requests==2.28.1
+          pip3 install zhdate==0.1
+
       - name: weixin
         run: |
           python3 main.py
